--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,6 @@
   font-family: 'Raleway', sans-serif;
 }
 
-
-
 body {
   width: 100%;
   margin: 0;
@@ -22,7 +20,7 @@ body {
 }
 
 .tabs-list {
-  width: calc(100% /3);
+  width: calc(100% / 3);
   margin: 0px auto;
   margin-top: 10px;
   margin-bottom: 30px;
@@ -139,22 +137,42 @@ body {
 }
 
 
-@media screen and (min-width: 468px) and (max-width: 900px) {
+
+@media only screen and (max-width: 950px) {
+  .tabs-list {
+    width: 47%;
+  }
+
+  .tab-item {
+    width: 120px;
+  }
+
+  .todo-list {
+    width: 46%;
+    text-align: left;
+    margin: 30px auto;
+  }
+}
+
+
+@media only screen and (max-width: 600px) {
 
   .tabs-list {
     width: 85%;
   }
 
+  .tab-item {
+    width: 95px;
+  }
+
   .task-input {
-    width: 320px;
+    width: 60%;
   }
 
   .todo-list {
+    width: 83%;
     text-align: left;
-    margin: 30px 40px;
-    display: flex;
-    flex-direction: column;
-    gap: 28px;
+    margin: 30px auto;
   }
   
 }
